5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1716_2506.log
== TEST (2019-05-15 17:09:41) 
-- CODE:
P=int(input("quantidade inicial: "))
perc=float(input("porcentagem: "))
r=int(input("quantidade retirado: "))
c=1
while(p>0 and p<=12000):
	p=p + p(perc/100) - r
	c=c+1
	if(p=r):
		e="ESTINCAO"
	if (p>=1200):
		e="LIMITE"
print(e)
print(c)
-- ERROR:
File "XXXX", line 8
    if(p=r):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:09:58) 
-- CODE:
P=int(input("quantidade inicial: "))
perc=float(input("porcentagem: "))
r=int(input("quantidade retirado: "))
c=1
while(p>0 and p<=12000):
	p=p + p(perc/100) - r
	c=c+1
	if(p==r):
		e="ESTINCAO"
	if (p>=1200):
		e="LIMITE"
print(e)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(p>0 and p<=12000):
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:11:20) 
-- CODE:
P=int(input("quantidade inicial: "))
perc=float(input("porcentagem: "))
r=int(input("quantidade retirado: "))
c=1
while(p>0 and p<=12000):
	P=P + P(perc/100) - r
	c=c+1
	if(P==r):
		e="ESTINCAO"
	if (P>=1200):
		e="LIMITE"
print(e)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(p>0 and p<=12000):
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:11:50) 
-- CODE:
P=int(input("quantidade inicial: "))
perc=float(input("porcentagem: "))
r=int(input("quantidade retirado: "))
c=1
while(P>0 and P<=12000):
	P=P + P(perc/100) - r
	c=c+1
	if(P==r):
		e="ESTINCAO"
	if (P>=1200):
		e="LIMITE"
print(e)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    P=P + P(perc/100) - r
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:14:22) 
-- CODE:
P=float(input("quantidade inicial: "))
perc=float(input("porcentagem: "))
r=float(input("quantidade retirado: "))
c=1
while(P>0 and P<=12000):
	P=P + P(perc/100) - r
	c=c+1
	if(P==r):
		e="ESTINCAO"
	if (P>=1200):
		e="LIMITE"
print(e)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    P=P + P(perc/100) - r
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:15:17) 
-- CODE:
P=int(input("quantidade inicial: "))
perc=float(input("porcentagem: "))
r=int(input("quantidade retirado: "))
c=1
while(P>0 and P<=12000):
	P = P + P*(perc/100) - r
	c=c+1
	if(P==r):
		e="ESTINCAO"
	if (P>=1200):
		e="LIMITE"
print(e)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(e)
NameError: name 'e' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:15:44) 
-- CODE:
P=int(input("quantidade inicial: "))
perc=float(input("porcentagem: "))
r=int(input("quantidade retirado: "))
c=0
while(P>0 and P<=12000):
	P = P + P*(perc/100) - r
	c=c+1
	if(P==r):
		e="ESTINCAO"
	if (P>=1200):
		e="LIMITE"
print(e)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(e)
NameError: name 'e' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:16:01) 
-- CODE:
P=int(input("quantidade inicial: "))
perc=float(input("porcentagem: "))
r=int(input("quantidade retirado: "))
c=0
while(P>0 and P<=12000):
	P = P + P*(perc/100) - r
	c=c+1
	if(P==r):
		e="ESTINCAO"
	if (P>=1200):
		e="LIMITE"
print(e)
print(c)
-- EXECUTION TIME:
0.176672
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 12, in <module>
    print(e)
NameError: name 'e' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:16:54) 
-- CODE:
P=float(input("quantidade inicial: "))
perc=float(input("porcentagem: "))
r=float(input("quantidade retirado: "))
c=0
while(P>0 and P<=12000):
	P = P + P*(perc/100) - r
	c=c+1
	if(P==r):
		e="ESTINCAO"
	if (P>=1200):
		e="LIMITE"
print(e)
print(c)
-- EXECUTION TIME:
0.154425
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 12, in <module>
    print(e)
NameError: name 'e' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:20:05) 
-- CODE:
P=int(input("quantidade inicial: "))
perc=float(input("porcentagem: "))
r=int(input("quantidade retirado: "))
c=0
while(P>0 and P<12000):
	P = P + P*(perc/100) - r
	c=c+1
	if(P==r):
		e="ESTINCAO"
	if (P>=1200):
		e="LIMITE"
print(e)
print(c)
-- EXECUTION TIME:
0.152074
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 12, in <module>
    print(e)
NameError: name 'e' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:23:41) 
-- CODE:
P=int(input("quantidade inicial: "))
perc=float(input("porcentagem: "))
r=int(input("quantidade retirado: "))
c=0
while(P>0 and P<12000):
	P = P + P*(perc/100) - r
	c=c+1
	if(P<=r):
		e="ESTINCAO"
	if (P>=1200):
		e="LIMITE"
print(e)
print(c)
-- EXECUTION TIME:
0.172704
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
ESTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:30:00) 
-- CODE:
P=int(input("quantidade inicial: "))
perc=float(input("porcentagem: "))
r=int(input("quantidade retirado: "))
c=0
while(P>0 and P<12000):
	P = P + P*(perc/100) - r
	c=c+1
	if(P<=r):
		e="EXTINCAO"
	if (P>=1200):
		e="LIMITE"
print(e)
print(c)
-- EXECUTION TIME:
0.146969
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
